# templates

./: LICENSE  README.md  flake.nix
haskell/: .gitignore  CHANGES.md  flake.nix  hello.cabal  hie.yaml
haskell/.github/workflows/: tests.yml
haskell/app/: hello.hs
haskell/src/: Hello.hs
ruby/: flake.nix
